Fix SummationNotation lower limit block spacing #visual
https://github.com/mathquill/mathquill/commit/18f5a67c5e165d96f15172a85cf97096c66f63f5#commitcomment-5705893

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -285,7 +285,6 @@
       font-size: 80%;
     }
     .from {
-      margin-top: -.1em;
       float: right; /* take out of normal flow to manipulate baseline */
       width: 100%;
     }
